--- a/css/style.css
+++ b/css/style.css
@@ -315,6 +315,11 @@ body {
   margin-top: 30px;
   text-align: center;
 }
+@media screen and (max-width: 415px) {
+  .works_wrapper img{
+    width: 100%;
+  }
+}
 
 
 
